# rust-sql-orm-sample

./: .gitignore  Taskfile.yaml  docker-compose.yaml
.github/workflows/: rust.yml  test.yaml
diesel_test/: Cargo.toml
diesel_test/src/: connection.rs  delete.rs  get.rs  insert.rs  lib.rs  main.rs  model.rs  select.rs  update.rs
diesel_test/tests/: db_io.rs
golang-migrate/migrations/: 000002_create_comments.up.sql
goose/migrations/: 20240907181838_create_users.sql  20240907181844_create_comments.sql
migrator/: Dockerfile.dev  atlas.hcl
migrator/migrations/: 20240730093558_create_users.sql  20240902023003_add_users_name.sql  20240902023155_add_users_name.sql  20240902024748_add_users_name.sql  20240903015738_add_commnets_to_primary_key.sql  20240907192028_create_users.sql  20240907192100_create_users.sql  20240907192133_create_users.sql  atlas.sum
migrator/schema/: schema.hcl
prisma_test/: Cargo.toml
prisma_test/.cargo/: config.toml
prisma_test/prisma/: schema.prisma
prisma_test/prisma-cli/: Cargo.toml
prisma_test/src/: delete.rs  get.rs  insert.rs  lib.rs  main.rs  prisma.rs  select.rs  update.rs
rbatis_test/: Cargo.toml
rbatis_test/src/: delete.rs  get.rs  insert.rs  lib.rs  main.rs  select.rs  table.rs  update.rs
sea_orm_test/: Cargo.toml
sea_orm_test/src/: connection.rs  delete.rs  get.rs  insert.rs  lib.rs  main.rs  select.rs  update.rs
sqldef/: schema.sql
sqlx_test/: Cargo.toml
sqlx_test/migrations/: 20240906123246_create_users.up.sql
sqlx_test/src/: connection.rs  delete.rs  get.rs  insert.rs  lib.rs  main.rs  select.rs  (+1 more)
(+11 files in other folders)
