[workspace]
resolver = "2"
members = ["prisma-cli"]

[package]
name = "prisma_test"
version = "0.1.0"
edition = "2021"

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde = "1.0.209"
axum = { version = "0.7.5"}
tokio = { version = "1.38.0", features = ["full"] }
