[package]
name = "rbatis_test"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
rbs = { version = "4.5"}
rbatis = { version = "4.5"}
rbdc-mysql={version="4.5"}

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
fast_log = "1.6"